force-app/main/default/objects/Opportunity/fields/HAM_Annual_Total__c.field-meta.xml
<CustomField>
    <fullName>HAM_Annual_Total__c</fullName>
    <formula>IF(
    ISPICKVAL(ucinn_ascendv2__Frequency__c, &quot;Monthly&quot;),
    Amount * 12,
    IF(
        ISPICKVAL(ucinn_ascendv2__Frequency__c, &quot;Weekly&quot;),
        Amount * 52,
	    IF(
      		  ISPICKVAL(ucinn_ascendv2__Frequency__c, &quot;Bi-Weekly&quot;),
       		 Amount * 26,
		    IF(
      		 	 ISPICKVAL(ucinn_ascendv2__Frequency__c, &quot;Quarterly&quot;),
       		 Amount * 4,
        Amount
		)
	)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>