force-app/main/default/objects/Opportunity/fields/HAM_Business_Office_Asset__c.field-meta.xml
<CustomField>
    <fullName>HAM_Business_Office_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Office Asset</label>
    <type>Checkbox</type>
</CustomField>