force-app/main/default/objects/Opportunity/fields/HAM_CFY_Ask__c.field-meta.xml
<CustomField>
    <fullName>HAM_CFY_Ask__c</fullName>
    <formula>IF(
    IF( 
        (MONTH( Today() ) &gt;= 6 &amp;&amp; MONTH( Today() ) &lt;= 12), 
        ((YEAR( Today() )+ 1)), 
        ((YEAR( Today() )) )
    )
    =
    IF( 
        (
            MONTH( ucinn_ascendv2__Expected_Close_Date__c ) &gt;= 6 
            &amp;&amp; MONTH( ucinn_ascendv2__Expected_Close_Date__c ) &lt;= 12
        ), 
        ((YEAR( ucinn_ascendv2__Expected_Close_Date__c )+ 1)), 
        ((YEAR( ucinn_ascendv2__Expected_Close_Date__c )))
    ), 
    TRUE, 
    FALSE
)</formula>
    <label>CFY Ask</label>
    <type>Checkbox</type>
</CustomField>