force-app/main/default/objects/Opportunity/fields/HAM_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>HAM_Data_Source__c</fullName>
    <description>Source of transactions, specifically data loads</description>
    <inlineHelpText>Identifies data load the transaction came from</inlineHelpText>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Data_Source</valueSetName>
    </valueSet>
</CustomField>