force-app/main/default/objects/Opportunity/fields/HAM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>