force-app/main/default/objects/Opportunity/fields/HAM_Has_Primary_Donor_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>HAM_Has_Primary_Donor_Mismatch__c</fullName>
    <description>This field if set then indicates that there is mismatch in count of primary donor and hard credits</description>
    <formula>HAM_Hard_Credit_Count__c  &lt;&gt;  HAM_Primary_Donor_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field if set then indicates that there is mismatch in count of primary donor and hard credits</inlineHelpText>
    <label>Has Primary Donor Mismatch</label>
    <type>Checkbox</type>
</CustomField>