force-app/main/default/objects/Opportunity/fields/HAM_IRA_Acknowledgement_Generated__c.field-meta.xml
<CustomField>
    <fullName>HAM_IRA_Acknowledgement_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soft Credit Acknowledgement Generated</label>
    <type>Checkbox</type>
</CustomField>