force-app/main/default/objects/Opportunity/fields/HAM_Is_Donor_Control__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Donor_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Donor Control</label>
    <type>Checkbox</type>
</CustomField>