force-app/main/default/objects/Opportunity/fields/HAM_Net_Present_Value__c.field-meta.xml
<CustomField>
    <fullName>HAM_Net_Present_Value__c</fullName>
    <label>Net Present Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>