force-app/main/default/objects/Opportunity/fields/HAM_Of_Age__c.field-meta.xml
<CustomField>
    <fullName>HAM_Of_Age__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Of Age</label>
    <type>Checkbox</type>
</CustomField>