force-app/main/default/objects/Opportunity/fields/HAM_Original_Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Original_Pledge_Amount__c</fullName>
    <label>Original Pledge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>