force-app/main/default/objects/Opportunity/fields/HAM_PG_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_PG_ID__c</fullName>
    <displayFormat>PG-{00000}</displayFormat>
    <label>PG ID</label>
    <type>AutoNumber</type>
</CustomField>