force-app/main/default/objects/Opportunity/fields/HAM_Primary_Resp_Person__c.field-meta.xml
<CustomField>
    <fullName>HAM_Primary_Resp_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Resp Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>