force-app/main/default/objects/Opportunity/fields/HAM_Primary_Resp_Person_Unit__c.field-meta.xml
<CustomField>
    <fullName>HAM_Primary_Resp_Person_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Resp Person Unit</label>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>