force-app/main/default/objects/Opportunity/fields/HAM_Round_Up_Gift__c.field-meta.xml
<CustomField>
    <fullName>HAM_Round_Up_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Round Up Gift</label>
    <type>Checkbox</type>
</CustomField>