force-app/main/default/objects/Opportunity/fields/HAM_Soft_Credit_Contact__c.field-meta.xml
<CustomField>
    <fullName>HAM_Soft_Credit_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Soft Credit Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Soft Credit Contact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>