force-app/main/default/objects/Opportunity/fields/HAM_Soft_Credit_Contact_PRM__c.field-meta.xml
<CustomField>
    <fullName>HAM_Soft_Credit_Contact_PRM__c</fullName>
    <formula>HAM_Soft_Credit_Contact__r.ucinn_ascendv2__PRM__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soft Credit Contact PRM</label>
    <type>Text</type>
</CustomField>