force-app/main/default/objects/Opportunity/fields/HAM_Trust_Annuity_Term__c.field-meta.xml
<CustomField>
    <fullName>HAM_Trust_Annuity_Term__c</fullName>
    <label>Trust/Annuity Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Number of Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>