force-app/main/default/objects/Opportunity/fields/HAM_Vice_President_Override__c.field-meta.xml
<CustomField>
    <fullName>HAM_Vice_President_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vice President Override</label>
    <type>Checkbox</type>
</CustomField>