force-app/main/default/objects/Opportunity/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <description>Next Action Date</description>
    <inlineHelpText>Next Action Date</inlineHelpText>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>