force-app/main/default/objects/Opportunity/recordTypes/Grant_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Grant_Proposal</fullName>
    <active>true</active>
    <businessProcess>Grant Proposal</businessProcess>
    <description>Used for Grant Proposals</description>
    <label>Grant Proposal</label>
</RecordType>