force-app/main/default/objects/Opportunity/recordTypes/Planned_Gift.recordType-meta.xml
<RecordType>
    <fullName>Planned_Gift</fullName>
    <active>true</active>
    <businessProcess>Planned Gift</businessProcess>
    <label>Planned Gift</label>
</RecordType>