force-app/main/default/objects/Opportunity/validationRules/Ask_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Ask_Date</fullName>
    <active>true</active>
    <description>When stage is asked, ask date must be populated</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
ISPICKVAL(StageName, &quot;Asked&quot;) &amp;&amp; ISBLANK(ucinn_ascendv2__Submitted_Date__c) &amp;&amp; RecordType.DeveloperName = &quot;Proposal&quot; &amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Submitted_Date__c</errorDisplayField>
    <errorMessage>Ask date must be entered when the stage is &quot;Asked&quot;.</errorMessage>
</ValidationRule>