force-app/main/default/objects/Opportunity/validationRules/Ask_Date_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Ask_Date_Amount</fullName>
    <active>true</active>
    <description>Ask amount must be entered when the ask date field is populated.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
!ISBLANK(ucinn_ascendv2__Submitted_Date__c) &amp;&amp; ISBLANK(ucinn_ascendv2__Submitted_Amount__c) &amp;&amp; RecordType.DeveloperName = &quot;Proposal&quot; &amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Submitted_Amount__c</errorDisplayField>
    <errorMessage>Ask amount must be entered when the ask date field is populated.</errorMessage>
</ValidationRule>